# cmake

./: 刷CMake Practice.md
t1/: CMakeLists.txt
t2/: CMakeLists.txt  COPYRIGHT  README
t2/doc/: hello.txt
t2/src/: main.cpp
t3/lib/: CMakeLists.txt  hello.cpp  hello.h
t4/src/: CMakeLists.txt  main.cpp
